Added combine full video functionality

--- a/AI-Movie-Maker/AI-Movie-Maker.csproj
+++ b/AI-Movie-Maker/AI-Movie-Maker.csproj
@@ -28,6 +28,13 @@
     <None Update="media\loadingicon2.mp4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Tools\ffmpeg.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Tools\" />
   </ItemGroup>
 
 </Project>
